10.29.0 (September XX, 2024)
 - Added `factory.destroy()` method, which invokes the `destroy` method on all SDK clients created by the factory.
 - Updated @splitsoftware/splitio-commons package to version 1.18.0 that includes minor updates:
    - Added support for targeting rules based on large segments for browsers.
    - Updated some transitive dependencies for vulnerability fixes.
 - Bugfixing - Removed an overloaded `client` method in the `SplitIO.ISDK` interface that accepted a key and trafficType parameters. This interface corresponds to the SDK factory instance in NodeJS, which, unlike `SplitIO.IBrowserSDK` for the Browser, does not handle multiple client instances based on keys or traffic types.

10.28.0 (September 6, 2024)
 - Updated @splitsoftware/splitio-commons package to version 1.17.0 that includes minor updates:
    - Added `sync.requestOptions.getHeaderOverrides` configuration option to enhance SDK HTTP request Headers for Authorization Frameworks.
    - Updated some transitive dependencies for vulnerability fixes.

10.27.0 (June 25, 2024)
 - Added `sync.requestOptions.agent` option to SDK configuration for NodeJS. This allows passing a custom NodeJS HTTP(S) Agent with specific configurations for the SDK requests, like custom TLS settings or a network proxy (See https://help.split.io/hc/en-us/articles/360020564931-Node-js-SDK#proxy).
 - Updated some transitive dependencies for vulnerability fixes.

10.26.1 (June 14, 2024)
 - Updated the internal imports of 'os' and 'ioredis' modules for NodeJS, to use EcmaScript 'import' rather than CommonJS 'require' for the ES modules build. This avoids runtime errors on some scenarios when bundling the SDK into a .mjs file or importing it from a .mjs file.
 - Updated eventsource dependency for NodeJS. The eventsource v1.1.2 dependency was removed, and the SDK now uses an embedded adaptation that can accept an HTTP(S) agent option, like other HTTP(S) requests.