@@ -1,4 +1,6 @@
 10.29.0 (September XX, 2024)
+ - Added `factory.getState()` method for standalone server-side SDKs, which returns the rollout plan snapshot from the storage.
+ - Added `preloadedData` configuration option for standalone client-side SDKs, which allows preloading the SDK storage with a snapshot of the rollout plan.
  - Added `factory.destroy()` method, which invokes the `destroy` method on all SDK clients created by the factory.
  - Updated @splitsoftware/splitio-commons package to version 1.18.0 that includes minor updates:
     - Added support for targeting rules based on large segments for browsers.
